--- a/Tipper/Base.lproj/Main.storyboard
+++ b/Tipper/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Dku-4E-NPc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -63,17 +63,10 @@
                             <outletCollection property="gestureRecognizers" destination="NCz-vA-ZVp" appends="YES" id="1oj-qj-Qtb"/>
                         </connections>
                     </view>
-                    <navigationItem key="navigationItem" id="1ze-Iv-1vj">
-                        <barButtonItem key="rightBarButtonItem" title="Settings" id="1uq-jB-49p">
-                            <connections>
-                                <segue destination="Uxi-yY-O0j" kind="push" id="bDt-4v-81P"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="1ze-Iv-1vj"/>
                     <connections>
                         <outlet property="billField" destination="mHu-0C-HGn" id="Jv4-ev-Ap7"/>
                         <outlet property="dividerView" destination="isH-K0-JNz" id="WaI-xm-ixC"/>
-                        <outlet property="settingsButton" destination="1uq-jB-49p" id="5Em-Dd-P2R"/>
                         <outlet property="tipControl" destination="wCu-jj-Hm1" id="Qhs-Uh-2tY"/>
                         <outlet property="tipLabel" destination="BNb-W5-LYg" id="DHo-2Y-a3w"/>
                         <outlet property="totalLabel" destination="GxS-Tj-4Rf" id="hjQ-M2-KUR"/>
@@ -86,66 +79,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="646" y="331"/>
-        </scene>
-        <!--Settings View Controller-->
-        <scene sceneID="55e-JM-21L">
-            <objects>
-                <viewController id="Uxi-yY-O0j" customClass="SettingsViewController" customModule="Tipper" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ELK-Zw-f8f">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="iO7-eQ-v7j">
-                                <rect key="frame" x="30" y="126" width="261" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="15%"/>
-                                    <segment title="20%"/>
-                                    <segment title="25%"/>
-                                </segments>
-                                <color key="tintColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="defaultTipSetting:" destination="Uxi-yY-O0j" eventType="valueChanged" id="oAs-eJ-Hrm"/>
-                                    <action selector="onEditingChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Tdw-FD-7Yn"/>
-                                </connections>
-                            </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default tip:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lxY-eI-igv">
-                                <rect key="frame" x="30" y="97" width="84" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="k8o-sT-N8R"/>
-                    <connections>
-                        <outlet property="defaultTipControl" destination="iO7-eQ-v7j" id="xQq-JJ-nRt"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IEL-uE-qQO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1040" y="331"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Kal-Li-QE9">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dku-4E-NPc" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gbo-VM-6hU">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Gbp-Ac-3qx"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aV7-F2-Qgp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="240" y="331"/>
+            <point key="canvasLocation" x="436" y="300"/>
         </scene>
     </scenes>
 </document>
